# nerfmeshes

./: .gitignore  LICENSE  README.md  data  pyproject.toml  requirements.txt  script.sh
config/: buff-colmap-fern.yml  buff-colmap-room.yml  buff-synthetic-lego.yml  nerf-colmap-fern.yml  nerf-synthetic-lego.yml  nerf-synthetic-materials.yml  nerf-synthetic-mic.yml  tiny.yaml
pretrained/buff-colmap-fern/default/version_0/: hparams.yaml
pretrained/buff-synthetic-lego/default/version_0/: hparams.yaml
pretrained/colab-lego-nerf-high-res/default/version_0/: hparams.yaml
pretrained/nerf-colmap-fern/default/version_0/: hparams.yaml
src/: cache_dataset.py  colmap_convert.py  eval_nerf.py  lightning_modules.py  mesh_nerf.py  mesh_nerf6.py  mesh_nerf_chamfer.py  mesh_nerf_re.py  mesh_surface_ray.py  model_nerf.py  script.py  train_depth_nerf.py  train_nerf.py  train_nerf6.py  train_nerf_chamfer.py
src/config/: colab-lego-nerf-high-res.yml  colmap.yml  default.yml  fern.yml  lego-buff-high-res.yml  lego-high-res.yml  lego-mesh.yml  lego.yml  lego_coarse.yml  lego_legacy.yml  lego_luminance.yml  lego_simple.yml  llff.yml  nerf-materials-high-res.yml  nerf-mic-high-res.yml  scannet.yml  tiny.yaml
src/data/: __init__.py  colmap_convert.py  data_helpers.py  datasets.py  datasets_cache.py  load_blender.py  load_colmap.py  load_llff.py  load_scannet.py
src/data/loaders/: __init__.py  load_blender.py  load_llff.py
src/models/: __init__.py  model_base.py  model_buff.py  model_helpers.py  model_nerf.py
src/nerf/: __init__.py  datasets.py  load_blender.py  loggers.py  models.py  modules.py  nerf_helpers.py  tiny_nerf.py  train_utils.py  tree.py  volume_rendering_utils.py
src/nerf/config/: lego.yml
src/nerf/exp/: __init__.py  train_utils_depth.py  volume_rendering_utils_depth.py
src/nerf/try/: train_utils_depth.py  volume_rendering_utils_depth.py
src/nerf4/: helpers.py  load_blender.py  mesh.py  train_utils.py  trianglemesh.py
