[tool.poetry]
name = "NeRF-extension"
version = "0.1.0"
description = "A mesh reconstruction tool build around Neural Radiance Fields"
authors = ["Cristian Chivrga <cchivriga@gmail.com>"]
license = "MIT"

[virtualenvs]
create = true
in-project = true

[tool.poetry.dependencies]
python = "^3.7"
imageio = "^2.8.0"
numpy = "^1.18.4"
matplotlib = "^3.2.1"
opencv-python-headless = "^4.2.0"
OpenEXR = "^1.3.2"
pyyaml = "^5.3.1"
tensorboard = "^2.2.0"
torchvision = "^0.7.0"
pytorch3d = "^0.2.5"
pytorch-lightning = "^0.9.0"
scikit-image = "^0.17.2"
tqdm = "^4.46.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
